# libsim

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  build-js.sh  build-native-cov.sh  build-native-dbg.sh  build-native-rel.sh  build-native.sh  build.sh  coverage.lcov  install.sh  lcov_cobertura.py  llvm-cov-helper.py
dependencies/: BuildDeps.Dockerfile  CMakeLists.txt  Dockerfile  build_boost.sh  build_py.sh  user-config.jam
dependencies/boost_emsdk/: Dockerfile  user-config.jam
dependencies/catch/: CMakeLists.txt
dependencies/outcome/: CMakeLists.txt  README.md
lib/: CMakeLists.txt  defs.hpp  instruction.cpp  instruction.hpp  interface.hpp  model.cpp  model.hpp
lib/components/computer/: block_computer.hpp  block_computer.tpp
lib/components/memory/: block.hpp  block.tpp  historian.hpp
lib/components/reg/: block.hpp  historian.hpp
lib/isa/: env_interface.hpp  proc_interface.hpp  sim_interface.hpp  step_delta.hpp
lib/isa/pep10/: block_computer.cpp  block_computer.hpp  block_computer.tpp  defs.hpp  instruction.cpp  instruction.hpp  model.cpp  model.hpp  proc.cpp  proc.hpp
lib/isa/pep9/: instruction.cpp  instruction.hpp  proc.cpp  proc.hpp
lib/pep10/: defs.hpp  instruction.cpp  instruction.hpp  model.cpp  model.hpp
sample/: CMakeLists.txt  main.cpp
src/libisa/: CMakeLists.txt  outcome_helper.hpp  version.hpp.in
src/libisa/asmb/: highlight.hpp
src/libisa/asmb/pep10/: create_driver.cpp  create_driver.hpp  directives.hpp  directives.tpp  highlight.cpp  highlight.hpp  ir.cpp  ir.hpp  parser.cpp  parser.hpp  parser.tpp  tokenizer.hpp
src/libisa/asmb/pep9/: driver.hpp
src/libisa/components/computer/: block_computer.hpp
src/libisa/components/delta/: README.md  base.hpp  base.tpp  delta_mmio.hpp  delta_mmio.tpp  grouped.hpp  grouped.tpp  layered.hpp  layered.tpp  mmio.hpp  mmio.tpp  vector.hpp  vector.tpp
src/libisa/components/machine/: delta.hpp  delta.tpp  interace.hpp  interface.hpp  interface.tpp  machine_error.cpp  machine_error.hpp  processor_error.cpp  processor_error.hpp  processor_model.hpp  virtual_machine.hpp
src/libisa/components/memory/: chips.hpp  historian.hpp  memorysystem.hpp  storage.hpp  storage.tpp
src/libisa/components/reg/: block.hpp  historian.hpp
src/libisa/elf_tools/: elf_helper.cpp  elf_helper.hpp  pep_elf_error.cpp  pep_elf_error.hpp
src/libisa/elf_tools/pep10/: mem_map.hpp  mem_map.tpp
src/libisa/isa/: sim_interface.hpp  step_delta.hpp
src/libisa/isa/pep10/: defs.hpp  from_elf.hpp  from_elf.tpp  instruction.cpp  instruction.hpp  local_machine.hpp  local_machine.tpp  local_processor.cpp  local_processor.hpp  local_processor.tpp  pep10.cpp  pep10.hpp  proc.cpp  proc.hpp
src/libisa/isa/pep9/: defs.hpp  instruction.cpp  instruction.hpp  pep9.cpp  pep9.hpp  proc.cpp  proc.hpp
src/libisa/masm/: README.md  conversion.cpp  conversion.hpp  driver.hpp  driver.tpp  errorhandler.hpp  macro.hpp  macroparser.cpp  macroparser.hpp  registry.cpp  registry.hpp
src/libisa/masm/backend/: assign_addr.tpp  sanity.cpp  sanity.hpp  sanity.tpp
src/libisa/masm/debug/: stack.hpp
src/libisa/masm/elf/: addr_line_mapping.hpp  elfpack.hpp  io_error.cpp  io_error.hpp  mmio.cpp  mmio.hpp  pack.hpp  pack.tpp  section.hpp  serialize.cpp  serialize.hpp
src/libisa/masm/frontend/: imagize.hpp  imagize.tpp  initproj.hpp  preprocesser.cpp  preprocesser.hpp  preprocesser.tpp  sectionize.cpp  sectionize.hpp  sectionize.tpp  tokenizer.hpp  tokenizer.tpp  tokens.hpp
src/libisa/masm/ir/: base.hpp  directives.tpp
src/libisa/masm/project/: image.hpp  image.tpp  init_project.hpp  message_handler.hpp  message_handler.tpp  project.hpp  section.hpp  section.tpp
src/libisa/masm/utils/: listing.hpp  listing.tpp
src/libisa/symbol/: entry.hpp  entry.tpp  helper.hpp  table.hpp  table.tpp  types.hpp  types.tpp  value.hpp  value.tpp  visit.hpp  visit.tpp
src/libisa/utils/: format.cpp  format.hpp
src/nodeisa/: CMakeLists.txt  README.md  application.cpp  application.hpp  helper.hpp  pep10.cpp  pep10.hpp  pep9.cpp  pep9.hpp  sim.hpp
src/nodeisa/node/: .npmignore  demo.js  package.json
src/pysa/: CMakeLists.txt  README.md  dummy.cpp
test/: CMakeLists.txt  test.cpp
test/instructions/: memmap.cpp  nonunary.cpp  unary.cpp
test/instructions/pep10/: unary.cpp
test/instructions/pep9/: memmap.cpp  nonunary.cpp  trap.cpp  unary.cpp
test/libisa/: CMakeLists.txt
test/libisa/asmb/: CMakeLists.txt
test/libisa/asmb/pep10/: preprocess.cpp
test/libisa/asmb/pep10/assign_addr/: helper.cpp  helper.hpp  object_code_size.cpp  simple.cpp
test/libisa/asmb/pep10/pack/: flat.cpp  (+2 more)
test/libisa/builtins/: CMakeLists.txt
test/libisa/definitions/: CMakeLists.txt
test/libisa/definitions/pep9/: trap.cpp
test/libisa/elf_tools/: CMakeLists.txt
test/libisa/elf_tools/pep10/: pep10.cpp
test/libisa/execution/: CMakeLists.txt
test/libisa/execution/pep10/: CMakeLists.txt
test/libisa/instructions/pep10/: memmap.cpp  nonunary.cpp  unary.cpp
test/libisa/instructions/pep9/: memmap.cpp  nonunary.cpp  trap.cpp  unary.cpp
test/libisa/isa/pep10/: byte_load_decode.cpp  word_load_decode.cpp
test/libisa/machines/pep10/: read_write.cpp  simple.cpp  simple_traces.cpp
test/libisa/masm/: CMakeLists.txt  args.cpp  lir.cpp  preprocess.cpp  registry.cpp  section.cpp  sectionize.cpp
test/libisa/masm/assign_addr/: bad_symbols.cpp  object_code_size.cpp  overflow.cpp  simple.cpp
test/libisa/masm/elf/: address_line.cpp
test/libisa/masm/tokens/: ch_lit.cpp  dec.cpp  dot_command.cpp  hex.cpp  ident.cpp  macro_args.cpp  macro_ident.cpp  str_lit.cpp  symbol.cpp
test/libisa/masm/utils/: listing.cpp
test/libisa/memory/: mmi.cpp  mmo.cpp  pubsub.cpp  storage.cpp
test/libisa/sim/pep10/: delta.cpp  init.cpp
test/libisa/sim/pep9/: delta.cpp  init.cpp
test/libisa/storage/: CMakeLists.txt  layered.cpp  mmi.cpp  mmo.cpp  pubsub.cpp  readonly.cpp  storage.cpp
test/libisa/symbol/: CMakeLists.txt  one_table.cpp  table.cpp  two_table.cpp  values.cpp
test/nodeisa/: CMakeLists.txt
test/pysa/: CMakeLists.txt
test/sim/: delta.cpp  init.cpp
(+123 files in other folders)
